--- a/9th July/BPL.css
+++ b/9th July/BPL.css
@@ -188,7 +188,8 @@ li {
 
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: left;
-    margin-left: 35px;
+	margin-left: 35px;
+	padding-top: 40px;
 	line-height: 1.6;
 
 }
@@ -231,4 +232,7 @@ li {
 {
 	width: 70%;
 	margin: 0 auto;
+	background-color: #F5F5F5;
+	display: flex;
+	/* margin: 3%; */
 }
